Fix problem with text overflow

--- a/src/app/components/recipes/recipes.component.css
+++ b/src/app/components/recipes/recipes.component.css
@@ -36,6 +36,8 @@
 	border-color: #c5c5c5;
   padding-right: 20px;
   padding-left: 20px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .nav-sidebar > .selected {
   color: #fff;
